--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -19,7 +19,7 @@ jobs:
       fail-fast: false
       matrix:
         os: [ubuntu-latest, windows-latest, macos-latest]
-        python-version: ['3.12']
+        python-version: ['3.12', '3.13', '3.14.0-beta.2']
         python-arch: [x64]
 
     steps:
@@ -32,7 +32,7 @@ jobs:
         architecture: ${{ matrix.python-arch }}
 
     - name: Install Poetry
-      uses: snok/install-poetry@v1
+      uses: snok/install-poetry@v1.4.1
 
     - name: Install
       run: |
@@ -71,4 +71,3 @@ jobs:
     - name: Static Analysis
       run: |
         python -m pre_commit run --all-files
-
