--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -59,6 +59,15 @@ jobs:
         python-version: 3.12
         architecture: x64
 
+    - name: Install Poetry
+      uses: snok/install-poetry@v1.4.1
+      with:
+        virtualenvs-in-project: true
+
+    - name: Install
+      run: |
+        poetry install
+
     - name: Upgrade pip & setuptools
       run: |
         python -m pip install --upgrade pip
